--- a/assets/css/office-direction.css
+++ b/assets/css/office-direction.css
@@ -10,13 +10,150 @@
 
     font-family: var(--second-font);
     font-size: 2.7rem;
+    font-weight: 700;
     color: var(--text-color);
-    letter-spacing: 1.2px;
+    letter-spacing: 1px;
 }
 .content-p-direction{
     display: flex;
     flex-direction: column;
-    row-gap: 2rem;
+    row-gap: 4rem;
     column-gap: 2rem;
     
 }
+.p-direction_article{
+    border-radius: 1.4rem;
+    box-shadow:0px 4px 10px rgba(0, 0, 0, 0.1);
+
+    padding: 1.4rem 3rem;
+    /* width: 100%; */
+    display: grid;
+    column-gap: 2rem;
+    
+    /* grid-template-columns: 3fr 1fr; */
+
+    justify-content: left;
+    align-items: center;
+    align-content: center;
+    
+}
+
+  
+.content-p-direction  .p-direction_article:nth-child(even) {
+    grid-template-columns: none;
+    row-gap: 0rem;
+}
+.content-p-direction  .p-direction_article:nth-child(odd) {
+    grid-template-columns: none;
+    row-gap: 0rem;
+}
+
+.content-p-direction  .p-direction_article .pd-article_right{
+    order: 1;
+}
+.content-p-direction  .p-direction_article .pd-article_left{
+    order: 2;
+}
+
+.pd-article_right-numb{
+        
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    
+}
+.pd-article_right-numb span{
+    font-size: 8rem;
+}
+
+
+
+/* 
+
+a partir d'ici
+
+ */
+
+.content-p-direction .pd-article_left-title .title_1{
+    font-size: 1.5rem;
+    text-align: left;
+}
+.pd-article_left{
+  display: flex;
+  justify-content: left;
+  flex-direction:column;
+  row-gap: 1.5rem;
+}
+.pd-article_left-title{
+    text-align: left;
+}
+.pd-article_item .pd-article_right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    justify-self: center;
+}
+.pd-article_right-numb{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    /* background-image: url("../images/hero1.jpeg");
+    background-size:cover;
+    background-repeat: no-repeat; */
+    
+}
+.pd-article_right-numb span{
+    font-size: 8rem;
+    font-family: var(--body-font);
+    font-weight: 800;
+
+    background: url("../images/Masisi.jpg") no-repeat center;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+@media  screen and (min-width:550px) {
+   
+    .content-p-direction .p-direction_article:nth-child(odd) {
+        grid-template-columns: 3fr 1fr;
+      }
+    
+    .content-p-direction .p-direction_article:nth-child(even) {
+        grid-template-columns: 1fr 3fr;
+      }
+
+      .content-p-direction .p-direction_article:nth-child(odd) .pd-article_left{
+        order: 1;
+      }
+      .content-p-direction .p-direction_article:nth-child(odd) .pd-article_right{
+          order: 2;
+        }
+   
+    
+      .content-p-direction .p-direction_article:nth-child(even) .pd-article_left{
+        order: 2;
+      }
+      .content-p-direction .p-direction_article:nth-child(even) .pd-article_right{
+          order: 1;
+        }
+   
+        .content-p-direction .pd-article_left-title .title_1{
+            font-size: 1.7rem;
+            text-align: left;
+        }
+
+        .pd-article_right-numb span{
+            font-size: 12rem;
+           
+        }
+
+   
+    
+    }
